<?xml version="1.0"?>
<package format="3">
  <name>mobile_robot_cartographer_bringup</name>
  <version>0.1.0</version>
  <description>Cartographer bringup package aligned with the mobile_robot_ws real-robot hardware stack.</description>
  <maintainer email="eden@example.com">eden</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>ament_index_python</exec_depend>
  <exec_depend>cartographer_ros</exec_depend>
  <exec_depend>imu_car_ros2</exec_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>lslidar_driver</exec_depend>
  <exec_depend>mobile_robot_nav_bringup</exec_depend>
  <exec_depend>nav2_map_server</exec_depend>
  <exec_depend>rviz2</exec_depend>
  <exec_depend>tf2_ros</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
