<?xml version="1.0"?>
<package format="3">
  <name>mobile_robot_voice_interaction</name>
  <version>0.1.0</version>
  <description>ROS 2 speech-module package for command reading and interaction bridging.</description>
  <maintainer email="baotianyi@example.com">baotianyi</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>std_msgs</depend>

  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>python3-serial</exec_depend>

  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
